# src/main/kotlin/ru/foodbox/delivery/modules/productstats/api/dto/ReorderProductPopularityRequest.kt
@@ -1,0 +1,7 @@
+package ru.foodbox.delivery.modules.productstats.api.dto
+
+import java.util.UUID
+
+data class ReorderProductPopularityRequest(
+    val productIds: List<UUID>,
+)
